Fix a possible crash introduced by r46412 by not accessing the result variable before the NULL check

BUG=43408
TEST=none

Patch by Benjamin Jemlich <pcgod99@gmail.com>.

Review URL: http://codereview.chromium.org/2035003

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@46614 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 615692439512c071103d1e4418b187c4e30bac45