chrome/browser/password_manager/password_store_default.cc
@@ -116,16 +116,15 @@ void PasswordStoreDefault::OnWebDataServiceRequestDone(
     WebDataService::Handle handle,
     const WDTypedResult* result) {
   DCHECK(handles_.end() != handles_.find(handle));
-  DCHECK(result);
+
+  handles_.erase(handle);
+  if (!result)
+    return;
 
   if (PASSWORD_RESULT != result->GetType()) {
     NOTREACHED();
     return;
   }
-
-  handles_.erase(handle);
-  if (!result)
-    return;
 
   const PasswordForms& forms =
       static_cast<const WDResult<PasswordForms>*>(result)->GetValue();
